@@ -28,12 +28,11 @@ env:
     - HTSLIB_VERSION="1.3.1-npg-Apr2016"
     - SAMTOOLS1_VERSION="1.3.1-npg-May2016"
     - SAMTOOLS_VERSION="0.1.19"
-    - ILLUMINA2BAM_VERSION="1.18"
     - PICARD_VERSION="1.72"
     - TOOLS_INSTALLED=1
 #    - TEST_AUTHOR=1 # disabled to avoid perl critic complaints
     - MACHTYPE="`uname -m`"
-    - CLASSPATH="/tmp/picard-tools-${PICARD_VERSION}:/tmp/illumina2bam/dist"
+    - CLASSPATH="/tmp/picard-tools-${PICARD_VERSION}"
     - PATH="$PATH:/tmp/bin:/tmp/biobambam2/bin:$HOME/bin/$MACHTYPE"
     - LD_LIBRARY_PATH="/usr/local/lib:$HOME/lib/$MACHTYPE"
 
